welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: '(' expected but '{' found.
		if {(day==0 || day==6) HeureReveil="off"}
                   ^alarmClock:6: error: illegal start of simple expression
	}
        ^alarmClock:8: error: '(' expected but '{' found.
		if {(day==0 || day==6) HeureReveil="10:00"}
                   ^alarmClock:9: error: illegal start of simple expression
	}
        ^