welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	var HeureReveil:String="7:00"
	if (vacation) {
		if {(day==0 || day==6) HeureReveil="off"}
		else HeureReveil="10:00"
	}
	else {
		if {(day==0 || day==6) HeureReveil="10:00"}
	}
	return HeureReveil
}
